Design + Keywords done

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,2 @@
-<h2>Sehr gut! (Welcome)</h2>
-<p>Einen Schritt näher an der Lösung. Hier sind die nächsten Koordinaten:</p>
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/7FtMCrgpgcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2>WOW!</h2>
+<p>Du kannst eigenständig einen QR Code bedienen, vielleicht bist du ja doch kein Sheepl? Als Anerkennung deiner Leistungen gibt doch mal ein: "ichkannlesen"</p>
